--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@ media
 .idea/**/uiDesigner.xml
 .idea/**/gradle.xml
 .idea/**/libraries
+.idea/misc.xml
 *.iws /out/
 
 # Python #
@@ -70,7 +71,8 @@ coverage.xml
 .python-version
 
 
-.idea
+/.idea
+.idea/
 # celery
 celerybeat-schedule.*
 
